# gutenberg

./: .gitignore  AGENTS.md  ESCALATIONS.md  HEAL_LOG.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  RALPH.md  README.md  STATUS.md  loop.sh  pyproject.toml
failures/: index.json
specs/: 01-project-purpose-and-v1-boundaries.md  02-ingestion-cli.md  03-boundary-aware-chunking.md  04-manifest-and-run-layout.md  05-prompt-templates-and-manual-orchestration.md  06-python-package-quality.md  07-run-status-tracking.md  08-run-validation.md  09-chunk-context-enrichment.md  10-automated-orchestration.md  11-executor-worker-launch.md  12-worker-lifecycle-retry-resume.md  13-synthesis-execution.md  14-per-chunk-task-materialization.md  15-run-artifacts-and-reporting.md
src/gutenberg/: __main__.py  chunking.py  cli.py  executor.py  lifecycle.py  manifest.py  orchestration.py  paths.py  prompts.py  reporting.py  status.py  synthesis.py  tasks.py  validation.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_executor.py  test_lifecycle.py  test_manifest.py  test_orchestration.py  test_prompts.py  test_reporting.py  test_status.py  test_synthesis.py  test_tasks.py  test_validation.py
